# Python_practice_sessions_05

./: .gitignore  README.md  auto_fn.py  auto_oop.py  comprehensions.ipynb  functions_.ipynb  functions_500_.ipynb  functions_500_.py  functions_u_tests.py  guess_game.ipynb  logging.toml  pyproject.toml  python_data_types.ipynb  python_data_types_String.ipynb  python_data_types_features_comparison.ipynb  python_data_types_list_and_tuple.ipynb  python_data_types_set_and_dict_.ipynb  python_iteration_ds.ipynb  python_iteration_ds_cd__1.ipynb  python_iteration_exercises.ipynb  python_lambda_examples.ipynb  python_logical_and_bits_operators.ipynb  test_data.ipynb  test_functions_u_tests_1.py
Contex_manager_samples/: sample_1_.py  sample_2_.py  sample_3_.py  sample_4_.py
Functional_Programming/: app.ipynb  bye.html  closure_.py  closure_exercises.py  closure_practice_.py  closure_practice_0.py  composition_.py  decorators_.py  decorators_2.py  decorators_practice.py  example_3.py  functional_programming.ipynb  hello.html  monada.py  setter_getter_ex_1.py  setter_getter_ex_2.py  template.html
Neural_Networks/: ex_prototype.py  ex_prototype_description.py  impl_perc.py  perceptron.py
OOP_Programming/: .env-example  bmw.md  calendar.md  car_fn.py  car_oop.py  computer.md  employees_it.md  employees_it.py  ex_1.py  ex_2.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py  ex_9.py  ex_abc.py  ex_bmw.py  ex_calendar.py  ex_computer.py  ex_document.py  ex_iter.py  ex_iterators.py  ex_new.py  ex_pandera.py  ex_pydan_valid.py  ex_pydan_valid_2.py  ex_pydan_valid_3.py  oop_v1_.py  oop_v2_.py  oop_v3_iterator.py  oop_v4_iterator.py  order_created_event.schema.json  shipping.py  temp.py  temp_2.py
Unit_tests/: codewars_functions_.py  fn_1.py  fn_500_bonus.py  fn_average_.py  fn_comprehension.py  fn_comprehension_2.py  fn_discount.py  fn_dogs_age.py  fn_filter_e_n.py  fn_gcd.py  fn_is_anagram.py  fn_is_even.py  fn_is_prime.py  fn_lamb_average_.py  fn_map_add_list.py  fn_map_conc_list.py  fn_map_string_len.py  fn_multi_list.py  fn_s.py  gen_example.py  matrix.py
abstract_classes/: abc_1.py  abc_2.py  negatype_.py  temp_invariant.py
assignment/: Handball_elite.ipynb  expowiska tibia data_set.ipynb  lotto.ipynb  lotto.py  movies_dataset.ipynb  pocemons_quest.ipynb
binary_programming/: bin2hex.py  hex2bin.py  iso2utf.py  make_mask.py  make_mask_2.py  make_mask_clear_zero.py  make_mask_set_value.py
data_science/: agglomerative_clustering.ipynb  hyper_parameter_tuning_clustering.ipynb  image_clusteing.ipynb  kmeans_clustering_iris.ipynb  linear_discriminant_analysis.ipynb  mean_shift_titanic.ipynb  multiple_clustering_models_iris.ipynb  pca_reg.ipynb  pca_regression.ipynb  simple_kmeans_clustering.ipynb  simple_kmeans_clustering_iris.ipynb
demos/: ex_break.py  howmuchcode.py  matrix_scr_saver.py  stats.json
exceptions/: examp_1.py  examp_2.py  examp_3.py  examp_4.py  examp_5.py  examp_6.py
hidden_gems/: alarm-clock.py  basic_classes.ipynb  circle.py  data.json  data_ex.ipynb  ex_assignment_1.ipynb  ex_assignment_2.ipynb  ex_assignment_3.ipynb  ex_assignment_4.ipynb  ex_assignment_5.ipynb  ex_assignment_6.ipynb  ex_assignment_7.ipynb  ex_dict_data_c_flow.ipynb  ex_dict_data_cf.ipynb  ex_dict_json.ipynb  ex_dict_method.ipynb  ex_list_set_methods.ipynb  ex_pendulum.ipynb  ex_sort_sorted.ipynb  ex_sorted_map_filter_redius.ipynb  getter_setter.py  gs.py
logging_/: e_1.py  (+2 more)
(+389 files in other folders)
