[project]
name = "python-practice-sessions-05"
version = "0.1.0"
description = "The repository is dedicated to exercises in python programming."
authors = ["Piotr Lipinski <kinetics20@gmail.com>"]
license = "Beerware"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "pandas==2.2.3",
    "pillow==11.2.1",
    "pygments>=2.19.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "types-pygments>=2.19.0.20250516",
    "types-tqdm>=4.67.0.20250516",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
