[project]
name = "python-practice-sessions-05"
version = "0.1.0"
description = "The repository is dedicated to exercises in python programming."
authors = ["Piotr Lipinski <kinetics20@gmail.com>"]
license = "Beerware"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.13",
    "flask>=3.1.1",
    "folium>=0.20.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-storage>=3.11.0",
    "google-genai>=2.8.0",
    "httpx>=0.28.1",
    "inotify>=0.2.10",
    "inotify-simple>=1.3.5",
    "jinja2>=3.1.6",
    "jupyterlab>=4.4.3",
    "markdown>=3.8.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.3",
    "openai>=1.88.0",
    "pandas>=2.2.3",
    "pandas-stubs~=2.2.3",
    "pendulum>=3.1.0",
    "pillow==11.2.1",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pygame>=2.6.1",
    "pygments>=2.19.1",
    "pymdown-extensions>=10.16",
    "requests>=2.32.3",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "statsmodels>=0.14.6",
    "streamlit>=1.46.0",
    "streamlit-folium>=0.25.0",
    "torch>=2.12.0",
    "tqdm>=4.67.1",
    "types-pygments>=2.19.0.20250516",
    "types-tqdm>=4.67.0.20250516",
    "watchdog>=6.0.0",
    "weaviate-client>=4.21.0",
    "yellowbrick>=1.5",
    "pandera[pandas]>=0.31.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
